--- a/.github/workflows/PAGES.yml
+++ b/.github/workflows/PAGES.yml
@@ -54,7 +54,7 @@ jobs:
           source: ./docs
           destination: ./_site
       - name: Check broken links
-        run: "npx --yes broken-link-checker-local _site --filter-level=3 || true"
+        run: "npx --yes broken-link-checker-local _site --filter-level=3 -e -r || true"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
 
