--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -51,36 +51,61 @@ jobs:
               - '**/buildSrc/**'
               - '**/gradle/**'
               - '**/src/common*/**'
+              - '**/test/common*/**'
             jvm:
               - '**/src/jvm*/**'
               - '**/src/concurrent*/**'
+              - '**/test/jvm*/**'
+              - '**/test/concurrent*/**'
             android:
               - '**/AndroidManifest.xml'
               - '**/src/android*/**'
               - '**/src/jvmAndroid*/**'
               - '**/src/concurrent*/**'
               - '**/src/main/**'
+              - '**/test/android*/**'
+              - '**/test/jvmAndroid*/**'
+              - '**/test/concurrent*/**'
+              - '**/test/main/**'
             js:
               - '**/src/js*/**'
+              - '**/test/js*/**'
             wasm:
               - '**/src/wasm*/**'
+              - '**/test/wasm*/**'
             native:
               - '**/src/native*/**'
               - '**/src/concurrent*/**'
+              - '**/test/native*/**'
+              - '**/test/concurrent*/**'
             windows:
               - '**/src/mingw*/**'
+              - '**/test/mingw*/**'
             linux:
               - '**/src/linux*/**'
               - '**/src/posix*/**'
+              - '**/test/linux*/**'
+              - '**/test/posix*/**'
             macos:
+              - '**/src/apple*/**'
               - '**/src/macos*/**'
               - '**/src/darwin*/**'
               - '**/src/posix*/**'
+              - '**/test/apple*/**'
+              - '**/test/macos*/**'
+              - '**/test/darwin*/**'
+              - '**/test/posix*/**'
             ios:
+              - '**/src/apple*/**'
               - '**/src/ios*/**'
               - '**/src/tvos*/**'
               - '**/src/darwin*/**'
               - '**/src/posix*/**'
+              - '**/test/apple*/**'
+              - '**/test/ios*/**'
+              - '**/test/tvos*/**'
+              - '**/test/darwin*/**'
+              - '**/test/posix*/**'
   test-docs:
     needs: changes
     if: ${{ needs.changes.outputs.testDocs == 'true' }}
