Fixed and tests runJvmAutoreload with configuration cache enabled

--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -145,6 +145,7 @@ jobs:
       - { name: e2e test, working-directory: e2e/e2e-test, run: ./gradlew checkReferencesJvm --stacktrace }
       - { name: Archive E2E Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: e2e-test-results-linux-jvm, retention-days: 21, path: "**/e2e/e2e-test/build/screenshots", if-no-files-found: ignore } }
       - { name: e2e multi test and hotreload, working-directory: e2e/e2e-test-multi, run: "./gradlew --watch-fs --warn --configuration-cache --configuration-cache-problems=warn compileKotlinJvm" }
+      - { name: e2e multi test runJvmAutoreload, working-directory: e2e/e2e-test-multi, run: "./gradlew --configuration-cache :client:runJvmAutoreload" }
       - { name: Check publication includes iOS, run: ./gradlew checkModulePublication }
 
   test-jvm-macos:
