--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -190,7 +190,7 @@ jobs:
       - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev }
       - { name: Prepare Gradle, uses: gradle/gradle-build-action@ef76a971e2fa3f867b617efd72f2fbd72cf6f8bc } # v2.8.0
       - { name: Compile WASM, run: ./gradlew --parallel compileTestKotlinWasmJs }
-      #- { name: Test WASM, run: ./gradlew --parallel wasmJsBrowserTest }
+      - { name: Test WASM JS, run: ./gradlew --parallel wasmJsBrowserTest }
       - { name: Test JS, run: ./gradlew --parallel jsNodeTest jsBrowserTest }
 
   test-android:
