--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,7 @@ jgit = "5.13.1.202206130422-r"
 
 #kotlin = "1.9.0"
 #kotlin = "1.9.10"
-kotlin = "1.9.21"
+kotlin = "2.0.0-Beta2"
 kotlinx-coroutines = "1.8.0-RC"
 kotlinx-serialization = "1.6.2"
 kotlinx-atomicfu = "0.23.1"
