--- a/gradle.properties
+++ b/gradle.properties
@@ -66,7 +66,7 @@ org.gradle.daemon=true
 # https://kotlinlang.org/docs/whatsnew17.html#a-new-approach-to-incremental-compilation
 kotlin.incremental.useClasspathSnapshot=true
 
-android.disableAutomaticComponentCreation=true
+#android.disableAutomaticComponentCreation=true
 
 #kotlin.build.report.output=file
 
