--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,8 +39,9 @@ node = "16.9.1"
 #android-build-gradle = "7.4.2"
 #android-build-gradle = "8.0.0"
 #android-build-gradle = "7.4.0-beta02"
-android-build-gradle = "7.3.1"
+#android-build-gradle = "7.3.1"
 #android-build-gradle = "8.1.0-alpha04"
+android-build-gradle = "8.2.0"
 gson = "2.10.1"
 gradle-publish-plugin = "1.1.0"
 #gradle-publish-plugin = "0.14.0"
