The project is using an incompatible version (AGP 8.2.0) of the Android Gradle plugin. Latest supported version is AGP 8.2.0-beta05

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -41,7 +41,8 @@ node = "16.9.1"
 #android-build-gradle = "7.4.0-beta02"
 #android-build-gradle = "7.3.1"
 #android-build-gradle = "8.1.0-alpha04"
-android-build-gradle = "8.2.0"
+#android-build-gradle = "8.2.0" # The project is using an incompatible version (AGP 8.2.0) of the Android Gradle plugin. Latest supported version is AGP 8.2.0-beta05
+android-build-gradle = "8.2.0-beta05"
 gson = "2.10.1"
 gradle-publish-plugin = "1.1.0"
 #gradle-publish-plugin = "0.14.0"
