Try to void repo being detected as Webassembly instead of Kotlin

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 * text=auto eol=lf
+
+# https://github.com/github-linguist/linguist/blob/master/docs/overrides.md
+*.wasm linguist-vendored
+*.wat linguist-vendored
