--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,7 @@ jgit = "5.13.1.202206130422-r"
 #kotlin = "1.9.0"
 #kotlin = "1.9.10"
 kotlin = "1.9.22"
-kotlinx-coroutines = "1.8.0-RC"
+kotlinx-coroutines = "1.8.0"
 kotlinx-serialization = "1.6.2"
 kotlinx-atomicfu = "0.23.1"
 
