--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ proguard-gradle = "7.2.2"
 asm = "9.5"
 jgit = "5.13.1.202206130422-r"
 
-kotlin = "2.0.0-Beta5"
+kotlin = "2.0.0-RC1"
 kotlinx-coroutines = "1.8.0"
 kotlinx-serialization = "1.6.2"
 kotlinx-atomicfu = "0.23.1"
@@ -31,7 +31,7 @@ kotlinx-benchmark = "0.4.7"
 dokka = "1.9.10"
 kover = "0.6.1"
 kover-agent = "1.0.712"
-node = "16.9.1"
+node = "20.12.1"
 #android-build-gradle = "7.4.2"
 #android-build-gradle = "8.0.0"
 #android-build-gradle = "7.4.0-beta02"
