--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,8 +10,9 @@ asm = "9.5"
 jgit = "5.13.1.202206130422-r"
 
 kotlin = "2.0.0"
-kotlinx-coroutines = "1.8.1"
-kotlinx-serialization = "1.6.2"
+#kotlinx-coroutines = "1.8.1"
+kotlinx-coroutines = "1.9.0-RC"
+kotlinx-serialization = "1.7.0"
 kotlinx-atomicfu = "0.24.0"
 
 korlibs = "6.0.0-alpha1"
