--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,8 @@ kotlinx-coroutines = "1.9.0-RC"
 kotlinx-serialization = "1.7.0"
 kotlinx-atomicfu = "0.24.0"
 
-korlibs = "6.0.0-alpha2"
+korlibs = "6.0.0-alpha3"
+#korlibs = "999.0.0.999"
 
 kotlinx-benchmark = "0.4.7"
 dokka = "1.9.10"
@@ -33,7 +34,7 @@ korlibs-image = { module = "com.soywiz:korlibs-image", version.ref = "korlibs" }
 korlibs-inject = { module = "com.soywiz:korlibs-inject", version.ref = "korlibs" }
 korlibs-template = { module = "com.soywiz:korlibs-template", version.ref = "korlibs" }
 korlibs-time = { module = "com.soywiz:korlibs-time", version.ref = "korlibs" }
-korlibs-serialization-yaml = { module = "com.soywiz:korlibs-serialization-yaml", version.ref = "korlibs" }
+korlibs-serialization = { module = "com.soywiz:korlibs-serialization", version.ref = "korlibs" }
 jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jackson" }
 jackson-module-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "jackson" }
 junit = { module = "junit:junit", version.ref = "junit" }
