Fixes tvos compilation

--- a/gradle.properties
+++ b/gradle.properties
@@ -47,7 +47,7 @@ project.license.url=https://raw.githubusercontent.com/korlibs/korge-next/master/
 
 #kotlin.mpp.enableCompatibilityMetadataVariant=true
 #kotlin.mpp.enableCInteropCommonization.nowarn=true
-kotlin.mpp.enableCInteropCommonization=true
+#kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.stability.nowarn=true
 kotlin.wasm.stability.nowarn=true
 org.gradle.warning.mode=none
