--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,8 +15,8 @@ kotlinx-coroutines = "1.9.0-RC"
 kotlinx-serialization = "1.7.0"
 kotlinx-atomicfu = "0.24.0"
 
-korlibs = "6.0.0-alpha4"
-#korlibs = "999.0.0.999"
+#korlibs = "6.0.0-alpha4"
+korlibs = "999.0.0.999"
 
 kotlinx-benchmark = "0.4.7"
 dokka = "1.9.10"
